Final changes. Minus comments. Added php script for test